more OSL&Embree compat. changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,15 @@
-cmake_minimum_required(VERSION 2.8.4)
+cmake_minimum_required(VERSION 3.0)
 project(paprika)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
+
+include_directories(src src/api /root/oiio-Release-1.7.9/dist/linux64/include /root/OpenShadingLanguage-Release-1.7.5/dist/linux64/include /root/embree-2.13.0.x86_64.linux/include /usr/include/lua5.1)
 
 find_package(Boost COMPONENTS system thread REQUIRED)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
-
-include_directories(src src/api /root/oiio-Release-1.7.9/dist/linux64/include /root/OpenShadingLanguage-Release-1.7.5/dist/linux64/include /root/embree-2.13.0.x86_64.linux/include /usr/include/lua5.1)
+find_package(PkgConfig)
+pkg_search_module(OpenEXR REQUIRED OpenEXR)
 
 find_library(OIIO_LIBRARIES
             NAMES OpenImageIO
@@ -40,12 +42,13 @@ set(SOURCE_FILES
     src/generators/trimeshgenerator.cpp
     src/OSL/shading.cpp
     src/renderers/debugrenderer.cpp
-    src/renderers/pathtracer.cpp
+    # src/renderers/pathtracer.cpp
     src/shapes/mesh.cpp
     src/shapes/sphere.cpp
     src/shapes/triangulate.cpp
     src/paprika.cpp
+    src/cameras/perspectivecamera.cpp
 )
 add_executable(paprika ${SOURCE_FILES})
 
-target_link_libraries(paprika ${OIIO_LIBRARIES} ${OSL_LIBRARIES} ${EMBREE_LIBRARIES} lua5.1 ${Boost_LIBRARIES})
+target_link_libraries(paprika ${OIIO_LIBRARIES} ${OSL_LIBRARIES} ${EMBREE_LIBRARIES} ${OpenEXR_LIBRARIES} lua5.1 ${Boost_LIBRARIES})
